# src/routes/vehiculo.routes.js
@@ -4,8 +4,9 @@ const { AuthMiddleware, ParseIntMiddleware,CacheMiddleware } = require("../middl
 module.exports = function({ VehiculoController }) {
   const router = Router();
   
-  router.get("/", AuthMiddleware,VehiculoController.mongoGetAll);
-  router.get("/{idPropietario}", [AuthMiddleware, ParseIntMiddleware], VehiculoController.mongoGetVehiculoByIdPropietario);
+  router.get("/", [AuthMiddleware, ParseIntMiddleware],VehiculoController.mongoGetAll);
+  router.get("/propietario/:idPropietario", [AuthMiddleware, ParseIntMiddleware], VehiculoController.mongoGetVehiculoByIdPropietario);
+  router.get("/matricula/:matricula", [AuthMiddleware, ParseIntMiddleware], VehiculoController.mongoGetVehiculoByMatricula);
   
   router.post("/", [AuthMiddleware,ParseIntMiddleware], VehiculoController.mongoCreate);
   return router;
